ver2 modificado index

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         </tr>
     </table>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur officia quod excepturi perspiciatis culpa. Odit, numquam praesentium, cupiditate magnam voluptas quaerat eveniet minus reprehenderit ipsum labore accusantium aliquid amet. Fuga.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi repudiandae adipisci laudantium, eligendi optio qui dolor expedita, natus blanditiis magni, inventore corporis. Ut tempore veniam libero maxime voluptas ex?</p>
 </body>
 </html>
