index tabla , estilos

--- a/index.html
+++ b/index.html
@@ -4,17 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        td {  background-color: brown;
+            padding: 10px;
+            text-align: center;}
+        .parrafo{
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: justify;
+            color: blue;
+        }
+        .parrafo2{font-size: 16px;
+          font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+          text-align: right;
+          color: rgb(24, 241, 238);}
+    </style>
 </head>
 <body>
     <table border="1">
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>dato1</td>
+            <td>dato2</td>
+            <td>dato3</td>
+            <td>dato4</td>
+        </tr>
+         <tr>
+            <td>dato5</td>
+            <td>dato6</td>
+            <td>dato7</td>
+            <td>dato8</td>
+        </tr>
+         <tr>
+            <td>dato9</td>
+            <td>dato10</td>
+            <td>dato11</td>
+            <td>dato12</td>
+        </tr>
+         <tr>
+            <td>dato13</td>
+            <td>dato14</td>
+            <td>dato15</td>
+            <td>dato16</td>
         </tr>
     </table>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur officia quod excepturi perspiciatis culpa. Odit, numquam praesentium, cupiditate magnam voluptas quaerat eveniet minus reprehenderit ipsum labore accusantium aliquid amet. Fuga.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi repudiandae adipisci laudantium, eligendi optio qui dolor expedita, natus blanditiis magni, inventore corporis. Ut tempore veniam libero maxime voluptas ex?</p>
+    <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur officia quod excepturi perspiciatis culpa. Odit, numquam praesentium, cupiditate magnam voluptas quaerat eveniet minus reprehenderit ipsum labore accusantium aliquid amet. Fuga.</p>
+    <p class="parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi repudiandae adipisci laudantium, eligendi optio qui dolor expedita, natus blanditiis magni, inventore corporis. Ut tempore veniam libero maxime voluptas ex?</p>
 </body>
 </html>
