--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tabla</title>
     <style>
         td {  background-color: brown;
             padding: 10px;
@@ -17,6 +17,10 @@
           font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
           text-align: right;
           color: rgb(24, 241, 238);}
+          parrafo3{
+            font-family: Arial, Helvetica, sans-serif;
+            color: blue;
+        }
     </style>
 </head>
 <body>
@@ -48,5 +52,6 @@
     </table>
     <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur officia quod excepturi perspiciatis culpa. Odit, numquam praesentium, cupiditate magnam voluptas quaerat eveniet minus reprehenderit ipsum labore accusantium aliquid amet. Fuga.</p>
     <p class="parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi repudiandae adipisci laudantium, eligendi optio qui dolor expedita, natus blanditiis magni, inventore corporis. Ut tempore veniam libero maxime voluptas ex?</p>
+    <p class="parrafo3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequuntur, ad accusamus repellendus ipsa ipsum repellat sint commodi, nostrum veritatis voluptatum repudiandae numquam veniam cumque laboriosam corporis placeat recusandae sit!</p>
 </body>
 </html>
