ver3, index, marcador

--- a/index.html
+++ b/index.html
@@ -21,10 +21,28 @@
             font-family: Arial, Helvetica, sans-serif;
             color: blue;
         }
+        .img01{ 
+            width: 80%;
+            height: auto;
+            border-radius: 15px;
+        }
+        
     </style>
 </head>
 <body>
-    <table border="1">
+    <nav>
+        <ul>
+            <li><a href="#marcador1">home</a></li>
+            <li><a href="marcador2">nosotros</a></li>
+            <li><a href="marcador3">proyecto</a></li>
+            <li><a href="marcador4">contacto</a></li>
+        </ul>
+    </nav>
+    <h1 id="marcador1">fotos carros</h1>
+    <img class="img01" src="imagen/imagen 1.jpg" alt="foto" title="carros">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, ad harum! Minima rem debitis quia fuga pariatur quod tempora nostrum harum dolores eos! Deserunt voluptates molestiae sunt iure est ab?</p>
+    <br>
+    <table id="marcador2" border="1">
         <tr>
             <td>dato1</td>
             <td>dato2</td>
@@ -50,8 +68,8 @@
             <td>dato16</td>
         </tr>
     </table>
-    <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur officia quod excepturi perspiciatis culpa. Odit, numquam praesentium, cupiditate magnam voluptas quaerat eveniet minus reprehenderit ipsum labore accusantium aliquid amet. Fuga.</p>
-    <p class="parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi repudiandae adipisci laudantium, eligendi optio qui dolor expedita, natus blanditiis magni, inventore corporis. Ut tempore veniam libero maxime voluptas ex?</p>
+    <p id="marcador3" class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur officia quod excepturi perspiciatis culpa. Odit, numquam praesentium, cupiditate magnam voluptas quaerat eveniet minus reprehenderit ipsum labore accusantium aliquid amet. Fuga.</p>
+    <p id="marcador4" class="parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi repudiandae adipisci laudantium, eligendi optio qui dolor expedita, natus blanditiis magni, inventore corporis. Ut tempore veniam libero maxime voluptas ex?</p>
     <p class="parrafo3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequuntur, ad accusamus repellendus ipsa ipsum repellat sint commodi, nostrum veritatis voluptatum repudiandae numquam veniam cumque laboriosam corporis placeat recusandae sit!</p>
 </body>
 </html>
